# bumblebee-slambot

./: README.md
bumblebee_controller/: CMakeLists.txt  package.xml  setup.py
bumblebee_controller/config/: diff_drive_controller.yaml  joystick.yaml
bumblebee_controller/launch/: controller.launch  joystick_teleop.launch
bumblebee_controller/nodes/: noisy_controller_node.py  simple_controller_node.py
bumblebee_controller/src/bumblebee_controller/: noisy_controller.py  simple_controller.py
bumblebee_description/: CMakeLists.txt  package.xml
bumblebee_description/launch/: display.launch  gazebo.launch
bumblebee_description/rviz/: display.rviz
bumblebee_description/urdf/: bumblebee.urdf.xacro  bumblebee_gazebo.xacro
bumblebee_examples/: CMakeLists.txt  package.xml  setup.py
bumblebee_examples/nodes/: simple_timer.py  tf_examples_node.py
bumblebee_examples/src/bumblebee_examples/: tf_example.py
bumblebee_localisation/: CMakeLists.txt  package.xml  setup.py
bumblebee_localisation/config/: ekf.yaml
bumblebee_localisation/launch/: local_localisation.launch
bumblebee_localisation/nodes/: imu_republisher_node.py  kalman_filter_node.py
bumblebee_localisation/src/bumblebee_localisation/: kalman_filter.py
